Support for Java 24 restrictions on JNI